Football Controller "Teams" action tested and "Table" action first test prepared.

--- a/SportsAnalyzer/Web.config
+++ b/SportsAnalyzer/Web.config
@@ -4,12 +4,36 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <!-- NIE DZIAŁA -->
+    <!-- <add name="FootbalTeamDBContext"    connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\footballTeams.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />   -->
+     <!--<add name="FootbalTeamDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\footballAPI.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />--> 
+    <add name="XmlSoccerAPI_DBContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\footballAPI.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!-- <add name="TeamStandingDBContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=SportsAnalyzer.Models.TeamStandingDBContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /> -->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <system.serviceModel>
+    <!--The bindings section references by the bindingConfiguration endpoint attribute.  -->
+    <bindings>
+      <basicHttpBinding>
+        <binding name="FootballDataDemoSoap" maxReceivedMessageSize="1000000" />
+        <binding name="FootballDataSoap" maxReceivedMessageSize="1000000" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://xmlsoccer.com/FootballDataDemo.asmx" binding="basicHttpBinding" bindingConfiguration="FootballDataDemoSoap" contract="DemoService.FootballDataDemoSoap" name="FootballDataDemoSoap" />
+      <endpoint address="http://xmlsoccer.com/FootballData.asmx" binding="basicHttpBinding" bindingConfiguration="FootballDataSoap" contract="ProService.FootballDataSoap" name="FootballDataSoap" />
+    </client>
+  </system.serviceModel>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -58,4 +82,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
