--- a/SportsAnalyzer/SportsAnalyzer.csproj
+++ b/SportsAnalyzer/SportsAnalyzer.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -53,6 +59,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -111,6 +119,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="XMLSoccerCOM">
+      <HintPath>..\..\..\..\..\biblioteki\XMLSoccerCOM Library\XMLSoccerCOM.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -143,9 +154,34 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\FootballController.cs" />
+    <Compile Include="DAL\XmlSoccerAPI_DBContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801171310043_DataAnnotations.cs" />
+    <Compile Include="Migrations\201801171310043_DataAnnotations.Designer.cs">
+      <DependentUpon>201801171310043_DataAnnotations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801191134003_ChangeTableName.cs" />
+    <Compile Include="Migrations\201801191134003_ChangeTableName.Designer.cs">
+      <DependentUpon>201801191134003_ChangeTableName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801191143393_StringLengthChange.cs" />
+    <Compile Include="Migrations\201801191143393_StringLengthChange.Designer.cs">
+      <DependentUpon>201801191143393_StringLengthChange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801191146477_ChangeFieldsProperties.cs" />
+    <Compile Include="Migrations\201801191146477_ChangeFieldsProperties.Designer.cs">
+      <DependentUpon>201801191146477_ChangeFieldsProperties.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801192051586_Reconstruction.cs" />
+    <Compile Include="Migrations\201801192051586_Reconstruction.Designer.cs">
+      <DependentUpon>201801192051586_Reconstruction.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\FootballTeam.cs" />
+    <Compile Include="Models\TeamLeagueStanding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -171,7 +207,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -185,10 +223,12 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Football\Index.cshtml" />
+    <Content Include="Views\Football\Teams.cshtml" />
+    <Content Include="Views\Football\Table.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -202,6 +242,26 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201801171310043_DataAnnotations.resx">
+      <DependentUpon>201801171310043_DataAnnotations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801191134003_ChangeTableName.resx">
+      <DependentUpon>201801191134003_ChangeTableName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801191143393_StringLengthChange.resx">
+      <DependentUpon>201801191143393_StringLengthChange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801191146477_ChangeFieldsProperties.resx">
+      <DependentUpon>201801191146477_ChangeFieldsProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801192051586_Reconstruction.resx">
+      <DependentUpon>201801192051586_Reconstruction.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
