Move variables and functions to Common class
Variables, constants and methods used by several various classes will
be included in one static class to organize the code well.

--- a/SportsAnalyzer/SportsAnalyzer.csproj
+++ b/SportsAnalyzer/SportsAnalyzer.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\FootballController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
+    <Compile Include="Controllers\Common.cs" />
     <Compile Include="DAL\XmlSoccerAPI_DBContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
