--- a/.gitignore
+++ b/.gitignore
@@ -259,9 +259,15 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/SportsAnalyzer/Migrations_old
-TODO.txt
+
+# Files excluded by me
 GCop.json
 GCopReport.json
 .vscode/settings.json
-Notes.txt
+.vscode/launch.json
+postponed/
+Screenshots/
+
+# Notes
+*.txt
+*.rtf
